--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile project(':library')
     compile 'com.makeramen:roundedimageview:2.2.1'
+    compile 'com.google.android.gms:play-services-ads:9.4.0'
+    compile 'com.github.chrisbanes:PhotoView:1.3.0'
 }
