--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.whl.emoguoshi">
 
+    <!-- 取得可顯示 AdMob 廣告的權限 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".app.App"
         android:allowBackup="true"
@@ -9,6 +13,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- 這段 meta-data 為必需 -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity android:name=".view.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +28,14 @@
         </activity>
         <activity android:name=".view.activity.FruitListActivity" />
         <activity android:name=".view.activity.FruitDetailActivity" />
-        <activity android:name=".view.activity.AboutUsActivity"></activity>
+        <activity android:name=".view.activity.AboutUsActivity" />
+
+        <!-- AdMob 的 AdActivity -->
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
+        <activity android:name=".view.activity.WallPaperDetailActivity"></activity>
     </application>
 
 </manifest>
